[tool.poetry]
name = "dashboard_app"
version = "0.1.0"
description = ""
authors = ["callistachang <changcallista@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
flask = "^1.1.2"
dash = "^1.13.4"
pandas = "^1.0.5"
python-dotenv = "^0.14.0"
flask_assets = "^2.0"
pyarrow = "^1.0.0"
statsmodels = "^0.11.1"
sklearn = "^0.0"
psutil = "^5.7.2"
requests = "^2.24.0"
pdfkit = "^0.6.1"
opencv-python = "^4.4.0"
scikit-image = "^0.17.2"
pillow = "^8.3.2"
imutils = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^6.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
